--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Course assignment for css frameworks",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run test-unit",
+    "test-unit": "jest",
     "build": "sass src/scss:dist/css",
     "watch": "sass --watch src/scss:dist/css & live-server"
   },
@@ -26,6 +27,9 @@
     "bootstrap": "^5.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
+    "jest": "^29.2.0",
     "live-server": "^1.2.2",
     "sass": "^1.54.8"
   }
