--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "npm run test-unit",
     "test-unit": "jest",
     "build": "sass src/scss:dist/css",
-    "watch": "sass --watch src/scss:dist/css & live-server"
+    "watch": "sass --watch src/scss:dist/css & live-server",
+    "test-e2e": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,9 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
+    "cypress": "^10.7.0",
+    "eslint": "^8.26.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "jest": "^29.2.0",
     "live-server": "^1.2.2",
     "sass": "^1.54.8"
